[gd_scene load_steps=12 format=3 uid="uid://dyueqg0efaw64"]

[ext_resource type="Script" path="res://Units/player_v2.gd" id="1_g1v30"]
[ext_resource type="PackedScene" uid="uid://cka37m5i2kq54" path="res://Components/health_bar.tscn" id="2_o78ao"]
[ext_resource type="PackedScene" uid="uid://cq51wxypscfeh" path="res://Units/LittleWitch/little_witch.tscn" id="4_r7bbg"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="5_t8k2f"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="6_cqq8a"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="7_u5a48"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="8_w5fi0"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_3d5xi"]
friction = 0.1

[sub_resource type="CylinderShape3D" id="CylinderShape3D_aimxp"]
height = 0.5

[sub_resource type="ViewportTexture" id="ViewportTexture_8j6s0"]
viewport_path = NodePath("SubViewport")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_qrji7"]
height = 1.5

[node name="Player" type="RigidBody3D"]
axis_lock_angular_x = true
axis_lock_angular_z = true
mass = 10.0
physics_material_override = SubResource("PhysicsMaterial_3d5xi")
script = ExtResource("1_g1v30")
SPEED = 10.0

[node name="ShapeCast3D" type="ShapeCast3D" parent="."]
shape = SubResource("CylinderShape3D_aimxp")
target_position = Vector3(0, -0.75, 0)

[node name="HealthBar" parent="." instance=ExtResource("2_o78ao")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.00242, 0)
texture = SubResource("ViewportTexture_8j6s0")

[node name="LittleWitch" parent="." instance=ExtResource("4_r7bbg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.75, 0)

[node name="Skeleton3D" parent="LittleWitch/Armature" index="0"]
bones/0/position = Vector3(-0.0214119, 0.352678, -0.272782)
bones/0/rotation = Quaternion(3.86181e-05, 0.707108, 0.707106, -3.86189e-05)
bones/2/rotation = Quaternion(-0.00875072, 4.395e-08, -0.00681035, 0.999939)
bones/3/rotation = Quaternion(-0.00288379, 1.71795e-10, -0.00224435, 0.999993)
bones/4/rotation = Quaternion(-0.00189966, -2.81346e-11, -0.00145259, 0.999997)
bones/7/rotation = Quaternion(-0.360529, 0.0180991, -0.116397, 0.92528)
bones/8/rotation = Quaternion(0.0691049, 0.0198199, 0.0570315, 0.995781)
bones/9/rotation = Quaternion(0.0573458, 0.000478001, 0.0724585, 0.995721)
bones/11/rotation = Quaternion(-0.313597, -0.0769565, -0.0785847, 0.943164)
bones/12/rotation = Quaternion(0.0358346, -0.0195415, -0.0548009, 0.997663)
bones/13/rotation = Quaternion(0.00874936, -0.000497896, -0.0411184, 0.999116)
bones/14/rotation = Quaternion(0.0165814, -0.00345044, 0.710094, 0.703903)
bones/15/rotation = Quaternion(-0.463497, -0.48367, 0.56918, 0.476726)
bones/16/rotation = Quaternion(0.00477692, 0.0498997, -0.0458608, 0.997689)
bones/17/rotation = Quaternion(0.0124965, 0.0062923, -0.709473, 0.704593)
bones/18/rotation = Quaternion(0.475037, -0.468418, 0.584092, -0.462343)
bones/19/rotation = Quaternion(0.00639429, -0.0498106, 0.0316073, 0.998238)

[node name="WiggleBone" parent="LittleWitch/Armature/Skeleton3D" index="1"]
transform = Transform3D(0.999779, -0.0066175, 0.019942, -0.0210105, -0.322755, 0.946249, 0.000174571, -0.94646, -0.322823, -0.0142164, 0.87885, -0.385096)

[node name="AnimationTree" parent="LittleWitch" index="2"]
parameters/RunBlend/blend_amount = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_qrji7")

[node name="NavigationObstacle3D" type="NavigationObstacle3D" parent="."]
radius = 1.0

[node name="StateChart" type="Node" parent="."]
script = ExtResource("5_t8k2f")

[node name="Root" type="Node" parent="StateChart"]
script = ExtResource("6_cqq8a")
initial_state = NodePath("Movement")

[node name="Movement" type="Node" parent="StateChart/Root"]
script = ExtResource("6_cqq8a")
initial_state = NodePath("Grounded")

[node name="Grounded" type="Node" parent="StateChart/Root/Movement"]
editor_description = "This state is active when the player is on the ground."
script = ExtResource("7_u5a48")

[node name="On Jump" type="Node" parent="StateChart/Root/Movement/Grounded"]
process_mode = 4
editor_description = "When jumping become airborne and enable double-jump."
script = ExtResource("8_w5fi0")
to = NodePath("../../Airborne")
event = &"jump"

[node name="On Airborne" type="Node" parent="StateChart/Root/Movement/Grounded"]
editor_description = "When becoming airborne (e.g. through falling) move to airborne state."
script = ExtResource("8_w5fi0")
to = NodePath("../../Airborne")
event = &"airborne"

[node name="Airborne" type="Node" parent="StateChart/Root/Movement"]
editor_description = "This is the root state for when the player is in the air. We have sub-states to handle the various input that is allowed when in the air."
script = ExtResource("6_cqq8a")
initial_state = NodePath("CannotJump")

[node name="On Grounded" type="Node" parent="StateChart/Root/Movement/Airborne"]
script = ExtResource("8_w5fi0")
to = NodePath("../../Grounded")
event = &"grounded"

[node name="CannotJump" type="Node" parent="StateChart/Root/Movement/Airborne"]
process_mode = 4
editor_description = "This state is active when the player is airborne but can no longer jump either because the coyote-jump grace period has expired or the player has already used the double-jump."
script = ExtResource("7_u5a48")

[node name="On Ragdoll" type="Node" parent="StateChart/Root/Movement"]
script = ExtResource("8_w5fi0")
to = NodePath("../../Ragdoll")
event = &"ragdoll"

[node name="Ragdoll" type="Node" parent="StateChart/Root"]
script = ExtResource("7_u5a48")

[node name="Recover" type="Node" parent="StateChart/Root/Ragdoll"]
script = ExtResource("8_w5fi0")
to = NodePath("../../Movement")
delay_seconds = 2.0

[connection signal="state_physics_processing" from="StateChart/Root/Movement" to="." method="_on_movement_state_physics_processing"]
[connection signal="state_physics_processing" from="StateChart/Root/Movement/Grounded" to="." method="_on_grounded_state_physics_processing"]
[connection signal="state_exited" from="StateChart/Root/Ragdoll" to="." method="_on_ragdoll_state_exited"]

[editable path="LittleWitch"]
